plugins {
    id 'java'
    id 'antlr'
}

group 'com.deependee'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}
sourceSets {
    main {
        java {
            srcDirs = [
                'src/main/java',
                'build/generated-src/antlr/main'
            ]
        }
    }
    test {
        java {
            srcDirs = ['src/test/java']
        }
    }
}

generateGrammarSource {
    source = "${project.projectDir}/src/main/antlr/Deependee.g4"
    outputDirectory = new File("${project.buildDir}/generated-src/antlr/main/com/deependee/generated/antlr/parser".toString())
}
generateGrammarSource {
    arguments += ["-package", "com.deependee.generated.antlr.parser" ]
}


java {
    sourceCompatibility = 16
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

dependencies {
    implementation 'org.junit.jupiter:junit-jupiter:5.9.2'
    antlr('org.antlr:antlr4:4.12.0') { // use ANTLR version 4
        exclude group:'com.ibm.icu', module:'icu4j'
    }
    implementation 'org.antlr:antlr4-intellij-adaptor:0.1'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
}

test {
    useJUnitPlatform()
}
